--- a/templates/dream.html
+++ b/templates/dream.html
@@ -1,44 +1,71 @@
-<div class="bg-pages dream-page">
+<div class="dream-page">
     <a class="dream-logo" href="#">
-        <img src="images/dream-logo.jpg" alt="Супермрія" width="649" height="357" />
+        <img src="images/dream-logo.jpg" alt="{{dream.title}}" width="649" height="357" />
+            <!-- ng-src="{{dream.logo}}"  -->
     </a>
     <a class="dream-video" href="#">
-        <img src="images/dream-video.jpg" alt="">
+        <video ng-src="{{dream.video}}" />
     </a>
     <ul class="dream-img">
-        <li><a href="#"><img src="images/dream-img.jpg" alt="" width="155" height="89" /></a></li>
-        <li><a href="#"><img src="images/dream-img.jpg" alt="" width="155" height="89" /></a></li>
-        <li><a href="#"><img src="images/dream-img.jpg" alt="" width="155" height="89" /></a></li>
-        <li><a href="#"><img src="images/dream-img.jpg" alt="" width="155" height="89" /></a></li>
+        <li ng-repeat="picture in dream.pictures">
+            <a href="#">
+                <img ng-src="picture.src" alt="" width="155" height="89" />
+            </a>
+        </li>
     </ul>
     <aside>
         <img class="dream-author-ava" src="images/dream-author-ava.jpg" alt="" width="66" height="66" />
-        <p class="dream-author-name"> <a href="#">Інна Кулік</a></p>
-        <a class="fund-raising" href="#">Розпочати збір коштів</a>
+        <!-- ng-src="{{dream.authorAvatar}}"  -->
+        <p class="dream-author-name">
+            <a href="#">Інна Кулік</a>
+            <!--{{dream.author}}-->
+        </p>
+        <!--<a class="fund-raising" href="#">Розпочати збір коштів</a>-->
         <h2>Підтримати</h2>
         <ul class="dream-support">
-            <li><span class="circle finance"></span><a href="#">Фінансово</a></li>
-            <li><span class="circle tools"></span><a href="#">Обладнанням / Технікою</a></li>
-            <li><span class="circle work"></span><a href="#">Провести роботи</a></li>
+            <li ng-show="dream.dream_financial_resources.length > 1">
+                <span class="circle finance"></span><a href="#">Фінансово</a>
+            </li>
+            <li ng-show="dream.dream_equipment_resources.length > 1">
+                <span class="circle tools"></span><a href="#">Обладнанням / Технікою</a>
+            </li>
+            <li ng-show="dream.dream_work_resources.length > 1">
+                <span class="circle work"></span><a href="#">Провести роботи</a>
+            </li>
         </ul>
         <p class="dream-support-text"> Підтримало<span class="dream-support-number">541</span></p>
         <div class="work-progress">
-            <div class="finance" data-pct="100">
+            <div class="finance"
+                 data-pct="{{100 * dream.dream_financial_contributions / dream.dream_financial_resources}}"
+                 ng-show="dream.dream_financial_resources == {}">
                 <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
-                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633"
+                            stroke-dashoffset="0"></circle>
+                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent"
+                            stroke-dasharray="{{157.079633 * dream.dream_financial_contributions / dream.dream_financial_resources}}"
+                            stroke-dashoffset="0"></circle>
                 </svg>
             </div>
-            <div class="instruments" data-pct="100">
+            <div class="instruments"
+                 data-pct="{{100 * dream.dream_equipment_contributions / dream.dream_equipment_resources}}"
+                 ng-show="dream.dream_equipment_resources == {}">
                 <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
-                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633"
+                            stroke-dashoffset="0"></circle>
+                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent"
+                            stroke-dasharray="{{157.079633 * dream.dream_equipment_contributions / dream.dream_equipment_resources}}"
+                            stroke-dashoffset="0"></circle>
                 </svg>
             </div>
-            <div class="people" data-pct="100">
+            <div class="people"
+                 data-pct="{{100 * dream.dream_work_contributions / dream.dream_work_resources}}"
+                 ng-show="dream.dream_work_resources == {}">
                 <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
-                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633" stroke-dashoffset="0"></circle>
+                    <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633"
+                            stroke-dashoffset="0"></circle>
+                    <circle class="bar" r="25" cx="30" cy="30" fill="transparent"
+                            stroke-dasharray="{{157.079633 * dream.dream_work_contributions / dream.dream_work_resources}}"
+                            stroke-dashoffset="0"></circle>
                 </svg>
             </div>
         </div>
@@ -106,22 +133,16 @@
     </aside>
     <section>
         <article>
-            <h1>Супермрія</h1>
-            <a class="dream-edit" href="#">Редагувати</a>
-            <div class="fund-raising-massage">
-                <p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>
-                <p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>
-                <p>ЧФ ПрАТ КБ "ПРИВАТБАНК" Р/р 123456789</p>
-
+            <h1>{{dream.title}}</h1>
+            <!--<a class="dream-edit" href="#">Редагувати</a>-->
+            <!--<div class="fund-raising-massage">-->
+                <!--<p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>-->
+                <!--<p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>-->
+                <!--<p>ЧФ ПрАТ КБ "ПРИВАТБАНК" Р/р 123456789</p>-->
+            <!--</div>-->
+            <div class="description">
+                {{dream.description}}
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum fugiat, reprehenderit eos fugit est porro tempore, accusamus sed odio vel, labore totam consectetur quam inventore aut. Mollitia beatae, laborum culpa.</p>
-            <ul class="dream-docs">
-                <li class="dream-docx"><a href="#">Building.docx</a></li>
-                <li class="dream-xslx"><a href="#">Building.xslx</a></li>
-                <li class="dream-pdf"><a href="#">Building.pdf</a></li>
-            </ul>
         </article>
         <h2>Учасники</h2>
         <ul class="dream-participants">
