--- a/templates/dream.html
+++ b/templates/dream.html
@@ -1,10 +1,10 @@
-<div class="dream-page">
+<div class="dream-page" ng-init="dream = currentDream()" dw-loading="dream" dw-loading-options="{text: 'Loading dream...'}">
     <a class="dream-logo" href="#">
         <img src="images/dream-logo.jpg" alt="{{dream.title}}" width="649" height="357" />
             <!-- ng-src="{{dream.logo}}"  -->
     </a>
     <a class="dream-video" href="#">
-        <video ng-src="{{dream.video}}" />
+        <!--<video ng-src="{{dream.video}}" />-->
     </a>
     <ul class="dream-img">
         <li ng-repeat="picture in dream.pictures">
@@ -15,12 +15,12 @@
     </ul>
     <aside>
         <img class="dream-author-ava" src="images/dream-author-ava.jpg" alt="" width="66" height="66" />
-        <!-- ng-src="{{dream.authorAvatar}}"  -->
+         <!--ng-src="{{dream.authorAvatar}}"  -->
         <p class="dream-author-name">
             <a href="#">Інна Кулік</a>
             <!--{{dream.author}}-->
         </p>
-        <!--<a class="fund-raising" href="#">Розпочати збір коштів</a>-->
+        <a class="fund-raising" href="#">Розпочати збір коштів</a>
         <h2>Підтримати</h2>
         <ul class="dream-support">
             <li ng-show="dream.dream_financial_resources.length > 1">
@@ -110,7 +110,7 @@
     <section>
         <article>
             <h1>{{dream.title}}</h1>
-            <!--<a class="dream-edit" href="#">Редагувати</a>-->
+            <a class="dream-edit" href="#">Редагувати</a>
             <!--<div class="fund-raising-massage">-->
                 <!--<p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>-->
                 <!--<p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>-->
