--- a/templates/dream.html
+++ b/templates/dream.html
@@ -17,8 +17,8 @@
         <img class="dream-author-ava" src="images/dream-author-ava.jpg" alt="" width="66" height="66" />
          <!--ng-src="{{dream.authorAvatar}}"  -->
         <p class="dream-author-name">
-            <a href="#">Інна Кулік</a>
-            <!--{{dream.author}}-->
+            <a href="#">{{dream.author}}</a>
+
         </p>
         <a class="fund-raising" href="#">Розпочати збір коштів</a>
         <h2>Підтримати</h2>
@@ -111,11 +111,11 @@
         <article>
             <h1>{{dream.title}}</h1>
             <a class="dream-edit" href="#">Редагувати</a>
-            <!--<div class="fund-raising-massage">-->
-                <!--<p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>-->
-                <!--<p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>-->
-                <!--<p>ЧФ ПрАТ КБ "ПРИВАТБАНК" Р/р 123456789</p>-->
-            <!--</div>-->
+            <div class="fund-raising-massage">
+                <p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>
+                <p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>
+                <p>ЧФ ПрАТ КБ "ПРИВАТБАНК" Р/р 123456789</p>
+            </div>
             <div class="description">
                 {{dream.description}}
             </div>
