editDream-page init

--- a/templates/dream.html
+++ b/templates/dream.html
@@ -110,7 +110,7 @@
     <section>
         <article>
             <h1>{{dream.title}}</h1>
-            <a class="dream-edit" href="#">Редагувати</a>
+            <a class="dream-edit" ui-sref="edit-dream({ slug: dream.slug })">Редагувати</a>
             <div class="fund-raising-massage">
                 <p>Розпочато збір коштів для реалізації мрії "Супермрія".</p>
                 <p><strong>Увага! Щоб уберегти Ваші кошти від зловмисників, здійснюйте переказ виключно за вказаними реквізитами.</strong></p>
