--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
                     <div class="owner">
                         <img src="images/author.png" alt="Author avatar"><!-- ng-src="{{dream.avatar}}"-->
 
-                        <p><a href="#">Інна Кулік</a></p><!-- ng-src="{{dream.author}}"-->
+                        <p><a href="#">{{dream.author}}</a></p>
                     </div>
                     <span class="triangle"></span>
                     <a ui-sref="dream({ slug: dream.slug })">
