--- a/templates/header.html
+++ b/templates/header.html
@@ -55,5 +55,5 @@
             <a class="logout" href="#">logout</a>
         </li>
     </ul>
-    <a class="add-dream" ui-sref="edit-dream({ slug: new })">Додати мрію</a>
+    <a class="add-dream" ui-sref="dreamAction({ slug: new })">Додати мрію</a>
 </header>
