Fixing connection dreamAction with app

--- a/templates/dreamAction.html
+++ b/templates/dreamAction.html
@@ -1,4 +1,4 @@
-<section class="bg-pages">
+<section class="bg-pages" ng-init="dream = currentDreamAction()" dw-loading="dreamAction" dw-loading-options="{text: 'Loading dream...'}">
     <form method="post">
         <fieldset class="media">
             <legend>Додати</legend>
