--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -10,7 +10,8 @@
         </li>
     </ul>
     <div class="carosel-inner">
-        <ul class="carosel-wrapper" rn-carousel rn-carousel-auto-slide="5" rn-carousel-index="chosen">
+        <ul class="carosel-wrapper" rn-carousel rn-carousel-index="chosen"
+            rn-carousel-auto-slide="5" rn-carousel-duration="500" rn-carousel-easing="linear">
             <li class="active"
                 ng-repeat="dream in doneDreams">
 
