fixed some styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -1006,11 +1006,6 @@ footer .social li span {
     clear: both;
   }
 
- .logo {
-    width: 88px;
-    margin: 0 auto;
-  }
-
   a {
     -webkit-tap-highlight-color: transparent;
   }
@@ -1033,8 +1028,11 @@ footer .social li span {
   }
 
   header .logo {
-    margin: 14px 0 0 0;
-  }
+    float: none;
+    display: block;
+    width: 88px;
+    margin: 14px auto 0;
+}
 
   /*-------------------------Mobile-nav----------------------------------*/
   header .mm-toggle {
@@ -1061,11 +1059,10 @@ footer .social li span {
   }
 
   header .add-dream {
-    position: relative;
     top: 0;
     right: 0;
-    left: 0;
-    float: right;
+    left: auto;
+    float: none;
     height: 60px;
     padding: 0;
     background: url(../images/ico_add.png) no-repeat right 9px;
@@ -1075,12 +1072,13 @@ footer .social li span {
 
   header .add-dream:before {
     content: '';
-    position: absolute;
     top: 0;
-    left: 50%;
+    right: 0;
+    left: auto;
     z-index: -1;
     height: 35px;
     width: 100px;
+    float: none;
     margin-left: -40px;
     background: url(../images/bg_add_dream.png) no-repeat;
   }
