Adding rn-carousel-locked

--- a/js/ui-directives/view/carousel.html
+++ b/js/ui-directives/view/carousel.html
@@ -11,7 +11,7 @@
     </ul>
     <div class="carosel-inner">
         <ul class="carosel-wrapper" rn-carousel rn-carousel-index="chosen"
-            rn-carousel-auto-slide="5" rn-carousel-duration="500" rn-carousel-easing="linear">
+            rn-carousel-auto-slide="5" rn-carousel-duration="500" rn-carousel-easing="linear" rn-carousel-locked="true">
             <li class="active"
                 ng-repeat="dream in doneDreams">
 
