--- a/js/ui-directives/view/carousel.html
+++ b/js/ui-directives/view/carousel.html
@@ -11,16 +11,16 @@
     </ul>
     <div class="carosel-inner">
         <ul class="carosel-wrapper" rn-carousel rn-carousel-index="chosen"
-            rn-carousel-auto-slide="5" rn-carousel-duration="500" rn-carousel-easing="linear" rn-carousel-locked="true">
+            rn-carousel-auto-slide="5" rn-carousel-duration="500" rn-carousel-easing="linear">
             <li class="active"
                 ng-repeat="dream in doneDreams">
 
-                <a ui-sref="dream({ slug: dream.slug })">
+                <div>
                     <img ng-src="{{dream.url}}" alt="Carousel Picture" style="width: 499px; height: 319px" />
                     <p class="dream-info">
                         {{dream.completed_description}}
                     </p>
-                </a>
+                </div>
             </li>
         </ul>
     </div>
