Fixing code for merging

--- a/js/ui-directives/view/header.html
+++ b/js/ui-directives/view/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a class="logo" ui-sref="home" ng-click="title = 'Головна'"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
+    <h1><a class="logo" ui-sref="home" ng-click="title = 'Черкаська мрія - Головна'"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
     <nav>
         <ul class="main-menu">
             <li><a ui-sref="faq">FAQ</a></li>
@@ -16,44 +16,47 @@
             <a class="search-link" href="#">Пошук</a>
         </div>
     </div>
-    <ul class="social">
-        <li>
-            <a href="#"><span class="ico-fb"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-vk"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-gplus"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-tw"></span></a>
-        </li>
-    </ul>
-    <span class="social-title" id="social-title-area">Увійти через</span>
-    <ul class="account-bar">
-        <li>
-            <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
-        </li>
-        <li>
-            <a class="profile" href="#">profile</a>
-        </li>
-        <li>
-            <a class="user-msg" href="#">messages</a>
-        </li>
-        <li class="show-dreams">
-            <a class="user-dreams" href="#">user dreams</a>
-            <ul class="user-dreams-list empty-list">
-                <li class="dream-item"><a href="#">Мрія 1</a></li>
-                <li class="dream-item"><a href="#">Мрія 2</a></li>
-                <li class="dream-item"><a href="#">Мрія 3</a></li>
-                <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
-                <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
-            </ul>
-        </li>
-        <li>
-            <a class="logout" href="#">logout</a>
-        </li>
-    </ul>
-    <a class="add-dream" ui-sref="addDream">Додати мрію</a>
+    <div ng-hide="isLogined">
+        <ul class="social">
+            <li>
+                <a href="#"><span class="ico-fb"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-vk"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-gplus"></span></a>
+            </li>
+            <li>
+                <a href="#"><span class="ico-tw"></span></a>
+            </li>
+        </ul>
+        <span class="social-title" id="social-title-area">Увійти через</span>
+
+    </div>
+    <!--<ul class="account-bar">-->
+    <!--<li>-->
+    <!--<a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>-->
+    <!--</li>-->
+    <!--<li>-->
+    <!--<a class="profile" href="#">profile</a>-->
+    <!--</li>-->
+    <!--<li>-->
+    <!--<a class="user-msg" href="#">messages</a>-->
+    <!--</li>-->
+    <!--<li class="show-dreams">-->
+    <!--<a class="user-dreams" href="#">user dreams</a>-->
+    <!--<ul class="user-dreams-list empty-list">-->
+    <!--<li class="dream-item"><a href="#">Мрія 1</a></li>-->
+    <!--<li class="dream-item"><a href="#">Мрія 2</a></li>-->
+    <!--<li class="dream-item"><a href="#">Мрія 3</a></li>-->
+    <!--<li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>-->
+    <!--<li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>-->
+    <!--</ul>-->
+    <!--</li>-->
+    <!--<li>-->
+    <!--<a class="logout" href="#">logout</a>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <a class="add-dream" href="#">Додати мрію</a>
 </header>
